Добавил README.md во все сервисы