@@ -3,7 +3,6 @@ package com.example.inventoryService.services;
 import com.example.inventoryService.dto.ProductDTO;
 import com.example.inventoryService.dto.ProductDTOResponse;
 import com.example.inventoryService.models.Product;
-import com.example.inventoryService.repositoryes.ProductOrderRepository;
 import com.example.inventoryService.repositoryes.ProductRepository;
 import com.example.inventoryService.util.ModelMapperUtil;
 import com.example.inventoryService.util.ProductNotFoundException;
@@ -12,7 +11,9 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.Collections;
 import java.util.Date;
+import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -28,25 +29,30 @@ public class ProductService {
 
     @Transactional(readOnly = true)
     public ProductDTOResponse findAll() {
-        ProductDTOResponse productDTOResponse = new ProductDTOResponse();
-        productDTOResponse.setResponse(productRepository.findAll().stream().map(modelMapperUtil::convertProductToProductDTO).toList());
-        return productDTOResponse;
+        List<Product> products = productRepository.findAll();
+        List<ProductDTO> productDTOs = products.stream()
+                .map(modelMapperUtil::convertProductToProductDTO)
+                .collect(Collectors.toList());
+
+        return createProductDTOResponse(productDTOs);
     }
 
     @Transactional(readOnly = true)
     public ProductDTOResponse findById(int id) {
-        ProductDTOResponse productDTOResponse = new ProductDTOResponse();
-        productDTOResponse.setResponse(Collections.singletonList(modelMapperUtil.convertProductToProductDTO(productRepository.findById(id).orElseThrow(ProductNotFoundException::new))));
-        return productDTOResponse;
+        Product product = productRepository.findById(id)
+                .orElseThrow(ProductNotFoundException::new);
+        ProductDTO productDTO = modelMapperUtil.convertProductToProductDTO(product);
+
+        return createProductDTOResponse(Collections.singletonList(productDTO));
     }
 
     public void save(ProductDTO productDTO) {
         Product product = modelMapperUtil.convertProductDTOToProduct(productDTO);
         Optional<Product> productFromDb = productRepository.findByName(product.getName());
         if (productFromDb.isPresent()) {
-            Product product2 = productFromDb.get();
-            product2.setUpdatedAt(new Date());
-            product2.setQuantity(productFromDb.get().getQuantity() + product.getQuantity());
+            Product existingProduct = productFromDb.get();
+            existingProduct.setUpdatedAt(new Date());
+            existingProduct.setQuantity(existingProduct.getQuantity() + product.getQuantity());
         } else {
             product.setCreatedAt(new Date());
             productRepository.save(product);
@@ -54,14 +60,22 @@ public class ProductService {
     }
 
     public void update(ProductDTO productDTO) {
-        productDTO.setCreatedAt(productRepository.findById(productDTO.getId()).orElseThrow(ProductNotFoundException::new).getCreatedAt());
-        Product product = modelMapperUtil.convertProductDTOToProduct(productDTO);
-        product.setUpdatedAt(new Date());
-        productRepository.save(product);
+        Product existingProduct = productRepository.findById(productDTO.getId())
+                .orElseThrow(ProductNotFoundException::new);
+        productDTO.setCreatedAt(existingProduct.getCreatedAt());
+        Product updatedProduct = modelMapperUtil.convertProductDTOToProduct(productDTO);
+        updatedProduct.setUpdatedAt(new Date());
+        productRepository.save(updatedProduct);
     }
 
     public void delete(int id) {
         productRepository.deleteById(id);
     }
 
+    private ProductDTOResponse createProductDTOResponse(List<ProductDTO> productDTOs) {
+        ProductDTOResponse productDTOResponse = new ProductDTOResponse();
+        productDTOResponse.setResponse(productDTOs);
+        return productDTOResponse;
+    }
 }
+
